# QCrossPlatformSerial

./: CMakeLists.txt  README.md
android/src/org/qtcrossplatformserial/: UsbSerialManager.java
android/src/org/qtserial/: UsbSerialManager.java
src/: QCrossPlatformSerialPort.cpp  QCrossPlatformSerialPort.hpp  QCrossPlatformSerialPortInfo.cpp  QCrossPlatformSerialPortInfo.hpp
